--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="img/jisro.svg" alt="Jisro">
                 <div class="gooey" src="img/gooey.svg" alt="Gooey"></div>
                 <div class="info">
-                    <div><h3>Hi, I’m Joris. Often misinterpreted as jisro.</h3></div>
+                    <div><h3>Hi, I’m Joris. Often misinterpreted as jisro.d</h3></div>
                     <br>
                     <div><h2> I’m a multidisicplinary designer and currently looking for job opportunities.</h2></div>
                 </div>
