--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Joris Jansen | Portfolio</title>
   </head>
   <body>
     <noscript>
